# android-av

./: .dockerignore  .gitignore  Cargo.toml  compose.yml  index.html
av-api/: Cargo.toml  Dockerfile
av-api/src/: database.rs  main.rs  models.rs
backend/: Dockerfile
backend/src/: main.rs  prediction.rs  state.rs  utils.rs
docs/: bibliography.bib  documentation.tex  listings-json.sty
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
model.pb/: fingerprint.pb  saved_model.pb
model.pb/variables/: variables.data-00000-of-00001  variables.index
src/: main.rs  prediction.rs
training/: model.py
