[package]
name = "av-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
dexompiler = { git = "https://github.com/yourlogarithm/dexompiler-rs.git", version = "*" }
rayon = "1.10.0"
serde = { version = "1.0.201", features = ["derive"] }
tensorflow = "0.21.0"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
