[package]
name = "av-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
derive-getters = "0.4.0"
dexompiler = { git = "https://github.com/yourlogarithm/dexompiler-rs.git", version = "*" }
futures = "0.3.30"
hex = "0.4.3"
mongodb = { version = "2.8.2", features = ["tokio-runtime"] }
rayon = "1.10.0"
serde = { version = "1.0.201", features = ["derive"] }
sha2 = "0.10.8"
tensorflow = "0.21.0"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
